# cbpys

./: .gitignore  README.md  cbps_ATT.R  cbps_att.py  cbps_r.r  cbps_torch.py  pyproject.toml
cbpys/: __init__.py  cbps_retarget.py  cbps_scipy.py  cbps_torch.py
cbpys/data/: __init__.py  kang_schafer.py
cbpys/diagnostics/: __init__.py
examples/: example.ipynb  example.py  ks.ipynb  linear_balancing_weights.ipynb
examples/data/: lalonde_exp.csv  lalonde_psid.csv
src/: cbps_retarget.py  cbps_torch.py
src/diagnostics/: differences.py
