[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cbpys"
version = "0.0.2"
description = "A Python Implementation of Covariate Balance Propensity Scores"
authors = [
  { name = "Apoorva Lal", email = "lal.apoorva@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "numpy",
  "scipy",
  "tqdm",
  "scikit-learn",
  "pandas",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the current directory
include = ["cbpys*"]  # Include all packages starting with cbpys
exclude = ["*.R",]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"
